# dlt-aws-lambda

./: .gitignore  README.md
examples/motherduck/: app.py  pyproject.toml  samconfig.toml  template.yaml
examples/snowflake/: Dockerfile  app.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
examples/sqs-athena/: app.py  pyproject.toml  template.yaml
examples/sqs-snowflake/: Dockerfile  app.py  pyproject.toml  samconfig.toml  template.yaml
